Fix warnings in generic types